# servents-data-model

./: pyproject.toml
.github/workflows/: lint-and-test.yml
scripts/: enum_to_literal.py
servents/data_model/: derived_consts.py  entity_configs.py  entity_types.py  update_entity.py
tests/: README.md  test_base_entity_config.py  test_device_config.py  test_update_entity.py  test_work_order_configs.py
